# wcr-stack

wcr_control/: CMakeLists.txt  package.xml
wcr_control/launch/: controller.launch.py
wcr_controllers/: CMakeLists.txt  package.xml
wcr_controllers/log/: latest_list
wcr_controllers/src/: inv_kin_controller.cpp  mimic_help_controller.cpp  model_based_controller.cpp  model_based_controller_velocity.cpp  reduced_model_based_controller_velocity.cpp  simple_torque_model_based_controller.cpp  torque_model_based_controller.cpp  trajectory_generator.cpp
wcr_description/: CMakeLists.txt  package.xml
wcr_description/env/: prepare_envs.sh.in
wcr_description/launch/: display.launch.py  gazebo.launch.py
wcr_description/log/: latest_list
wcr_description/meshes/: edfProp.stl  prop9Inch.stl  wheel.stl
wcr_description/rviz/: urdf_config.rviz
wcr_description/urdf/: mock_wcr_classic.ros2_control.xacro  wcr.gazebo  wcr.urdf.xacro  wcr_base.xacro  wcr_classic.ros2_control.xacro  wcr_common_properties.xacro  wcr_effort.ros2_control.xacro  wcr_mimic.ros2_control.xacro  wcr_mix.ros2_control.xacro  wcr_params.xacro  wcr_velocity.ros2_control.xacro
wcr_description/worlds/: ramp_world.sdf  robot_world.sdf  wcr_depot.sdf
wcr_description/worlds/meshes/: ramp.stl
wcr_keyboard/: CMakeLists.txt  package.xml
wcr_keyboard/src/: twist_to_controller.cpp
wcr_launcher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
wcr_launcher/config/: bridge.yaml  launch_params.yaml  robot_params.yaml  wcr_controller.yaml
wcr_launcher/launch/: launcher.launch.py
wcr_launcher/wcr_launcher/: yaml_loader.py
wcr_odometry/: CMakeLists.txt  package.xml
wcr_odometry/log/: latest_list
wcr_odometry/src/: odometry.cpp
